# Trivial_Implementations

./: .gitignore  Makefile  README.md
DelaunayTriangulation/code/: CMakeLists.txt  DelaunayTriangulation.h  Doxyfile  Draw.h  GLOBAL.h  Triangle.h  Triangles.h  Vector.h  main.cpp  test  testVector.cpp
DelaunayTriangulation/code/html/: DelaunayTriangulation_8h_source.html  Draw_8h_source.html  GLOBAL_8h.html  GLOBAL_8h_source.html  Triangle_8h_source.html  Vector_8h.html  Vector_8h_source.html  annotated.html  classScreen-members.html  classScreen.html  classTriangle-members.html  classTriangle.html  classTriangleList-members.html  classTriangleList.html  classTriangleTree-members.html  classTriangleTree.html  classVector2f-members.html  classVector2f.html  classes.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  globals_vars.html  structListNode-members.html  structListNode.html  structTreeNode-members.html  structTreeNode.html
DelaunayTriangulation/code/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  files_0.js  (+15 more)
DelaunayTriangulation/code/latex/: DelaunayTriangulation_8h_source.tex  Draw_8h_source.tex  GLOBAL_8h.tex  GLOBAL_8h_source.tex  Triangle_8h_source.tex  Vector_8h.tex  Vector_8h_source.tex  annotated.tex  classScreen.tex  classTriangle.tex  classTriangleList.tex  classTriangleTree.tex  classVector2f.tex  files.tex  refman.tex  structListNode.tex  structTreeNode.tex
OpenGLTemplate/: CMakeLists.txt  test
OpenGLTemplate/include/glad/: glad.c  glad.h
OpenGLTemplate/src/: project01.cpp  project03.cpp
VoronoiDiagram/code/: CMakeLists.txt  Draw.h  GLOBAL.h  RBTree.h  Vector.h  VoronoiDiagram.h  test.cpp  testRBTree.cpp
(+89 files in other folders)
